# secretary-bot

./: cron.txt  murmur.cabal  secretary-bot.cabal
app/: Main.hs
src/Web/: Secretary.hs
src/Web/Secretary/: File.hs  Parser.hs  Schedule.hs  ScheduleConstructor.hs  Twitter.hs  Util.hs
src/Web/Secretary/ScheduleConstructor/: Parser.hs  ScheduleConstructor.hs  Twitter.hs
src/Web/Twitter/: Murmur.hs
test/: Spec.hs
