name:                secretary-bot
version:             0.0.0.2
synopsis:            Simple CUI Twitter Client.
description:         This package privides simple CUI Twitter client. and very easy API.
homepage:            http://github.com/tokiwoousaka/
license:             BSD3
license-file:        LICENSE
author:              Tokiwo Ousaka
maintainer:          its.out.of.tune.this.my.music@gmail.com
copyright:           2016 Author Tokiwo Ousaka
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Web.Secretary
                     , Web.Secretary.Twitter
                     , Web.Secretary.Schedule
                     , Web.Secretary.File
                     , Web.Secretary.Util
                     , Web.Secretary.ScheduleConstructor
                     , Web.Secretary.ScheduleConstructor.ScheduleConstructor
                     , Web.Secretary.ScheduleConstructor.Parser
  build-depends:       base >= 4.7 && < 5
                     , twitter-conduit
                     , twitter-types-lens
                     , text
                     , bytestring
                     , authenticate-oauth
                     , http-conduit
                     , resourcet
                     , conduit
                     , conduit-extra
                     , transformers
                     , data-default
                     , lens
                     , attoparsec
                     , mtl
                     , strict
                     , extra
                     , time
                     , directory
  default-language:    Haskell2010

executable secretary-bot
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , secretary-bot
  default-language:    Haskell2010

test-suite secretary-bot-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , secretary-bot
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/murmur
